tests/fixtures/invalid/void_aggregate_field.c
struct Bad {
    void value;
};
int main(void) { return 0; }
